gcc/testsuite/rust/rustc/ui/type/missing-let-in-binding-3_dg.rs
struct A {
    : :u8, // { dg-error "" "" { target *-*-* } }
}

fn main() {}

